apps/staging/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: home.lukadimnik.com
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: /
            pathType: Prefix


# ingress manifest from the "homepage" install instructions
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: homepage
#   namespace: default
#   labels:
#     app.kubernetes.io/name: homepage
#   annotations:
#     gethomepage.dev/description: Dynamically Detected Homepage
#     gethomepage.dev/enabled: "true"
#     gethomepage.dev/group: Cluster Management
#     gethomepage.dev/icon: homepage.png
#     gethomepage.dev/name: Homepage
# spec:
#   rules:
#     - host: "homepage.my.network"
#       http:
#         paths:
#           - path: "/"
#             pathType: Prefix
#             backend:
#               service:
#                 name: homepage
#                 port:
#                   number: 3000
